formalized html changes

--- a/app/templates/new_job.html
+++ b/app/templates/new_job.html
@@ -1,139 +1,7 @@
-<!doctype html>
-<html>
+{% extends "base.html" %}
 
-<head>
-    <title>New Job</title>
+{% block title %}New Job{% endblock %}
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="../static/styles/css/all.min.css" />
-		<link rel="stylesheet" href="../static/styles/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../static/styles/css/tooplate-style.css" />
-		<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
-    <script type="text/javascript" src="../static/js/try.js"></script>
-    <script type="text/javascript" src="../static/js/try2.js"></script>
-    <script type="text/javascript" src="../static/js/try3.js"></script>
-    <script type="text/javascript" src="../static/js/try4.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</head>
-
-<style>
-  form {
-    text-align:center;
-  }
-</style>
-<body>
-
-     <!-- page header -->
-     <div class="container" id="home">
-      <div class="col-12 text-center">
-        <div class="tm-page-header">
-          <a href="/"> <img src="https://files.readme.io/RJLXFb1xS2vyMQQ80Vhq_apl_vertical_blue.png" width="100" height="100" alt=""></a>
-          <h1 class="d-inline-block text-uppercase">VENTANA Portal</h1>
-        </div>
-      </div>
-    </div>
-
-    <!-- navbar -->
-    <div class="tm-nav-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-
-            <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #adbddb;">
-              <a class="navbar-brand" href="/"> <img src="https://files.readme.io/RJLXFb1xS2vyMQQ80Vhq_apl_vertical_blue.png" width="30" height="30" alt="">SABER Portal</a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav mx-auto tm-navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="/"
-                      >Home <span class="sr-only">(current)</span></a
-                    >
-                  </li>
-                  <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/about" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="/documentation">What is VENTANA Portal?</a>
-                            <a class="dropdown-item" href="/saber_bossdb">SABER, bossDB, and NeuroGlancer</a>
-                            <a class="dropdown-item" href="/team">Meet the Team</a>
-                          </div>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Documentation</a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">FAQ's</a>
-                            <a class="dropdown-item" href="#">.cwl and .yml files</a>
-                          </div>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Datasets</a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="/datasets">View Datasets</a>
-                            <a class="dropdown-item" href="#">Open Source Workflows</a>
-
-                          </div>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dashboard</a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Completed Workflows</a>
-                            <a class="dropdown-item" href="#">Pending Workflows</a>
-                          </div>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us <span class="sr-only">(current)</span></a>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-      <br>
-      <br>
-        <div class="job">
-            <form action="/job_params" method="post">
-              <input name="jobName" type="text" placeholder="job name" />
-              <br />
-              <br /> 
-             <!-- <input name="cwlFilename" type="text" value="dummy.cwl" placeholder="example.cwl" />
-              <br />
-              <input name="yamlFilename" type="text" placeholder="yaml filename" />
-              <br /> --> 
-              <input type="radio" id="i2g" name="cwlFilename" value="i2g"> <label for="i2g">Images to Graphs EM Pipeline</label>
-              <br />
-              <input type="radio" id="synapse_threshold" name="cwlFilename" value="synapse_threshold"> <label for="synapse_threshold">Synapse Threshold Pipeline</label>
-              <br />
-              <input type="radio" id="ffn" name="cwlFilename" value="ffn"> <label for="ffn">Flood-fill Networks</label>
-              <br />
-              <input type="radio" id="post_threshold" name="cwlFilename" value="post_threshold"> <label for="post_threshold">Post-processing Threshold</label>
-              <br />
-              <input type="radio" id="boss_pull" name="cwlFilename" value="boss_pull"> <label for="boss_pull">Boss Pull Workflow</label>
-              <br />
-              <br />
-
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-
-</body>
-
-</html>
-
-  
+{% block content %}
+    <p> New Job form. Reads in parameters and sends request to airflow API.</p>
+{% endblock %}
