adds html forms and s3

--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -4,5 +4,6 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <p> Home Page Content here. Wiki Links. Job Status Dashboard.</p>
+    <p> Home Page Content here. Wiki Links. Job Status Dashboard test.</p>
+    <p> hello world </p>
 {% endblock %}
