--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,11 +46,21 @@
                     >
                   </li>
 
-                  <li class="nav-item">
-                    <a class="nav-link" href="/new_job"> Launch New Job</a>
+		  <li class="nav-item">
+                    <a class="nav-link" href="/new_experiment">New Experiment</a>
+		  </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="/jobs"> Current Jobs</a>
+                    <a class="nav-link" href="/new_job">New Job</a>
+		  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="/experiments">View Experiments</a>
+		  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="/jobs">View Current Jobs</a>
+		  </li>
                 </ul>
               </div>
             </nav>
