--- a/app/templates/new_experiment.html
+++ b/app/templates/new_experiment.html
@@ -3,11 +3,17 @@
 {% block title %}New Experiment{% endblock %}
 
 {% block content %}
+	<br>
 	<div class="container">
 		<form action="/api/experiment" method="post" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="name">Experiment Name</label>
 				<input type="text" name="name" min=1 required>
+			</div>
+
+			<div class="form-group">
+				<label for="mode">Mode</label>
+				<input type="text" name="mode" min=1 required>
 			</div>
 
 			<div class="form-group">
