--- a/app/templates/new_experiment.html
+++ b/app/templates/new_experiment.html
@@ -23,7 +23,7 @@
 
 			<div class="form-group">
 				<label for="s3ResultsBucket">S3 Results Bucket</label>
-				<input type="text" name="s3ResultsBucket" min=1 required>
+				<input type="text" name="s3ResultsBucket" min=1 value="saber_batch_dev" required>
 			</div>
 
 			<div class="form-group">
