--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -7,18 +7,20 @@
 		<thead class="thead-light">
 			<tr>
 				<th>Job</th>
+				<th>Execution Date</th>
 				<th>Status</th>
+				<th>Experiment</th>
 				<th>Output</th>
-				<th>Details</th>
 			</tr>
 		</thead>
 		<tbody>
 		{% for job in jobs %}
 			<tr>
-				<td>TODO Job</td>
-				<td>TODO Status</td>
-				<td>TODO Output</td>
-				<td>TODO Details</td>
+				<td>{{job["job_name"]}}</td>
+				<td>{{job["execution_date"]}}</td>
+				<td>{{job["status"]}}</td>
+				<td>{{job["experiment"]}}</td>
+				<td><a href="{{job["output"]}}">Download</a></td>
 			</tr>
 		{% endfor %}
 		</tbody>
