--- a/app/templates/experiments.html
+++ b/app/templates/experiments.html
@@ -20,7 +20,7 @@
 				<td>{{experiment["name"]}}</td>
 				<td>{{experiment["date"]}}</td>
 				<td>{{experiment["mode"]}}</td>
-				<td>{{experiment["image_dir"]}}</td>
+				<td>{{experiment["images_dir"]}}</td>
 				<td>{{experiment["_saber_bucket"]}}</td>
 				<td>{{experiment["output_file"]}}</td>
 			</tr>
