adds exp delete

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,9 @@
 		<title>SABER Dashboard</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="../static/styles/css/all.min.css" />
-		<link rel="stylesheet" href="../static/styles/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../static/styles/css/tooplate-style.css" />
+		<link rel="stylesheet" href="/static/styles/css/all.min.css" />
+		<link rel="stylesheet" href="/static/styles/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="/static/styles/css/tooplate-style.css" />
 		<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
