--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -11,6 +11,7 @@
 				<th>Status</th>
 				<th>Experiment</th>
 				<th>Output</th>
+				<th>Remove</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -21,6 +22,12 @@
 				<td>{{job["status"]}}</td>
 				<td>{{job["experiment"]}}</td>
 				<td><a href="{{job["output"]}}">Download</a></td>
+				<td>
+					<form action="/api/job/{{job['job_name']}}/delete", method="post">
+						<button type=submit">Remove</button>
+					</form>
+				</td>
+
 			</tr>
 		{% endfor %}
 		</tbody>
