--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -23,7 +23,7 @@
 				<td>{{job["experiment"]}}</td>
 				<td><a href="{{job["output"]}}">Download</a></td>
 				<td>
-					<form action="/api/job/{{job['job_name']}}/delete", method="post">
+					<form action="/api/job/{{job['job_name']}}/date/{{job['date']}}/delete", method="post">
 						<button type=submit">Remove</button>
 					</form>
 				</td>
