--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -21,15 +21,38 @@
 				<td>{{job["execution_date"]}}</td>
 				<td>{{job["status"]}}</td>
 				<td>{{job["experiment"]}}</td>
-				<td><a href="{{job["output"]}}">Download</a></td>
 				<td>
-					<form action="/api/job/{{job['job_name']}}/date/{{job['date']}}/delete", method="post">
-						<button type=submit">Remove</button>
-					</form>
+					<a href="/api/jobs/{{job['job_name']}}-{{job['date']}}/download" target="_blank">Download</a>
+				</td>
+				<td>
+					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal_{{job['job_name']}}_{{job['date']}}">
+						Remove
+					</button>
 				</td>
 
 			</tr>
 		{% endfor %}
 		</tbody>
 	</table>
+	{% for job in jobs %}
+	<div class="modal fade" id="modal_{{job['job_name']}}_{{job['date']}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Delete {{job['job_name']}} on {{job['date']}}</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<form action="/api/job/{{job['job_name']}}/date/{{job['date']}}/delete", method="post">
+						<button type="submit" class="btn btn-danger">Remove</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% endfor %}
+
 {% endblock %}
