minor changes and bug fixes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
 		<script src="/static/jquery-3.3.1.slim.min.js"></script>
 		<script src="/static/popper.min.js"></script>
 		<script src="/static/bootstrap.min.js"></script>
+		{% block scripts %} {% endblock %}
 	</head>
 
   <body>
