--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,8 @@
 		  <li class="nav-item"><a class="nav-link" href="/new_experiment">New Experiment</a></li>
                   <li class="nav-item"><a class="nav-link" href="/new_job">New Job</a></li>
                   <li class="nav-item"><a class="nav-link" href="/experiments">View Experiments</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/jobs">View Current Jobs</a></li>
+				  <li class="nav-item"><a class="nav-link" href="/jobs">View Current Jobs</a></li>
+				  <li class="nav-item"><a class="nav-link" href="/new_image">Pull New Docker Image</a></li>
 		</ul>
 	</div>
 </nav> 
