adds progress bar to ecr sync

--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 <div class="container">
+	<h1>
+		Current Jobs
+	</h1>
 	<table class="table table-bordered shadow-sm">
 		<thead class="thead-light">
 			<tr>
