--- a/app/templates/new_experiment.html
+++ b/app/templates/new_experiment.html
@@ -34,6 +34,9 @@ function toggle_train_step(e) {
 {% block content %}
 	<br>
 	<div class="container">
+		<h1>
+			New Experiment
+		</h1>
 		<form action="/api/experiment" method="post" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="name">Experiment Name</label>
