--- a/app/templates/new_job.html
+++ b/app/templates/new_job.html
@@ -39,6 +39,9 @@ function submit_job() {
 
 {% block content %}
 	<div class="container">
+		<h1>
+			New Job
+		</h1>
 		<div class="alert alert-info" role="alert">
 			<p>
 				<b>NOTE!</b>
