--- a/app/templates/new_image.html
+++ b/app/templates/new_image.html
@@ -60,6 +60,24 @@ $(document).ready(() => {
 
 {% block content %}
 	<div class="container">
+		<h1>
+			Pull Docker Image From ECR
+		</h1>
+		<div class="alert alert-info" role="alert">
+			<p>
+				Please ensure your image exists in a ECR repository on thebossdev AWS account in 
+				the us-east-1 region. Newly created repositories may take up five minutes to show on
+				this tool. Refresh the page if any new image or repositories are created. 
+			</p>
+		</div>
+		<div class="progress">
+			<div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{disk_space[0]}}%" aria-valuenow="{{disk_space[0]}}" aria-valuemin="0" aria-valuemax="100">
+				{{disk_space[0]}} %
+			</div>
+		</div>
+		<span>Disk Space Available: {{disk_space[1]}} GiB</span>
+		<br>
+		<br>
 		<form>
 			<div class="form-group">
 				<label for="repositoryName">Repository</label>
