fixes status bug

--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -30,7 +30,7 @@
 					<a href="/api/jobs/{{job['job_name']}}/download" class="btn btn-primary" target="_blank">Download</a>
 				</td>
 				<td>
-					<a href="/api/jobs/{{job['job_name']}}/log" class="btn btn-secondary" target="_blank">Download Log</a>
+					<a href="/api/jobs/{{job['job_name']}}/dag/{{job['dag_id']}}/date/{{job['execution_date']}}/log" class="btn btn-secondary" target="_blank">Download Log</a>
 				</td>
 				<td>
 					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal_{{job['job_name']}}_{{job['date']}}">
