--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="/static/styles/css/tooplate-style.css" />
 		<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    		<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
+    	<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
 
 		<script src="/static/jquery-3.3.1.slim.min.js"></script>
 		<script src="/static/popper.min.js"></script>
@@ -30,11 +30,12 @@
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-		  <li class="nav-item"><a class="nav-link" href="/new_experiment">New Experiment</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/new_job">New Job</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/experiments">View Experiments</a></li>
-				  <li class="nav-item"><a class="nav-link" href="/jobs">View Current Jobs</a></li>
-				  <li class="nav-item"><a class="nav-link" href="/new_image">Pull New Docker Image</a></li>
+			<li class="nav-item"><a class="nav-link" href="/new_experiment">New Experiment</a></li>
+			<li class="nav-item"><a class="nav-link" href="/new_job">New Job</a></li>
+			<li class="nav-item"><a class="nav-link" href="/experiments">View Experiments</a></li>
+			<li class="nav-item"><a class="nav-link" href="/jobs">View Current Jobs</a></li>
+			<li class="nav-item"><a class="nav-link" href="/new_image">Pull New Docker Image</a></li>
+			<li class="nav-item"><a class="nav-link" href="/statistics">Statistics</a></li>
 		</ul>
 	</div>
 </nav> 
